@@ -1,0 +1,10 @@
+{
+    "gui": [
+        {
+            "label": "Use UTF-8 outputs on Windows",
+            "command": "powershell -ExecutionPolicy Bypass -File \"utf.ps1\"",
+            "codepage": "utf8",
+            "components": []
+        }
+    ]
+}
