@@ -1,0 +1,2 @@
+﻿[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
+Write-Output "あいうえお"
