@@ -68,7 +68,7 @@ void DestroyProcess(subprocess_s &process, int *return_code, std::string &err_ms
     }
 }
 
-ExecuteResult Execute(const std::string& cmd) {
+ExecuteResult Execute(const std::string& cmd, bool use_utf8_on_windows) {
 #ifdef _WIN32
     std::wstring wcmd = UTF8toUTF16(cmd.c_str());
 
@@ -113,7 +113,12 @@ ExecuteResult Execute(const std::string& cmd) {
         out_read_size = ReadIO(process, READ_STDOUT, out_buf, BUF_SIZE, last_line, BUF_SIZE);
         err_read_size = ReadIO(process, READ_STDERR, err_buf, BUF_SIZE, err_msg, BUF_SIZE * 2);
 #ifdef _WIN32
-        printf("%s", out_buf);
+        if (use_utf8_on_windows) {
+            std::wstring wout = UTF8toUTF16(out_buf);
+            printf("%ls", wout.c_str());
+        } else {
+            printf("%s", out_buf);
+        }
 #else
         PrintFmt("%s", out_buf);
 #endif
