@@ -1,3 +1,5 @@
+- Added "codepage" option to support UTF-8 outputs on Windows.
+
 ver 0.7.0
 - Added options for string validation.
 - Added support for colorized output on Windows.
